# selit

./: LICENSE  README.md  pyproject.toml
selit/: __init__.py  history_logger.py  main.py  notification.py  utils.py  web.py  workdir.py
selit/templates/: add_keyword_trigger.html  add_prompt.html  base.html  edit_keyword_trigger.html  edit_prompt.html  history.html  index.html  prompts.html  settings.html
