[project]
name = "selit"
version = "0.1.0"
description = "A clipboard monitoring tool that tracks which window is using the clipboard"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pyperclip",
    "psutil",
    "requests",
    "flask",
    "flask-wtf",
    "pywin32; sys_platform == 'win32'",
]
authors = [
    {name = "Igor Udot"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
]

[project.scripts]
selit = "selit.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["selit"]
